[metadata]
name = oneai
version = attr: oneai.__version__
author_email = devrel@oneai.com
description = NLP as a Service
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/power-of-language/oneai_sdk_python
project_urls =
    Bug Tracker = https://github.com/power-of-language/oneai_sdk_python/issues
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.7
package_dir =
    = src
packages = find:
install_requires =
    aiohttp
    trafilatura
    validators
    typing_extensions

[options.packages.find]
where = src
