[metadata]
name = oneai
author = Michael Gur
version = attr: oneai.__version__
author_email = devrel@oneai.com
description = NLP as a Service
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/power-of-language/oneai-sdk-python
project_urls =
    Bug Tracker = https://github.com/power-of-language/oneai-sdk-python/issues
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.6
package_dir =
    = src
packages = find:
install_requires =
    aiohttp
    validators
    typing_extensions
    dataclasses; python_version<"3.7"
    requests
    python-dateutil

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-asyncio
    pytest-dependency
    mypy
    python-dotenv

[options.packages.find]
where = src
